syntax = "proto3";

// Internal management API
package yandex.cloud.priv.iam.management;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/iam/management;iam_cache";
option java_outer_classname = "PICCS"; // private iam cache control service

service CacheService {
  // Refresh specific server cache and stream messages related to the refresh process.
  rpc Refresh (RefreshCacheRequest) returns (stream RefreshCacheResponseMessage);
}

message RefreshCacheRequest {
  string cache_name = 1;
  int64 batch_size = 2;
}

message RefreshCacheResponseMessage {
  string message = 2;
}
